<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saikrishna.searchmovies.MainActivity">


    <TextView
        android:id="@+id/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="18dp"
        android:text="@string/HeadingText"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/SearchEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/HeadingText"
        android:layout_below="@+id/HeadingText"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/SearchEditText" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/SearchEditText"
        android:layout_below="@+id/SearchEditText"
        android:layout_marginStart="100dp"
        android:layout_marginTop="14dp"
        android:text="@string/SearchButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/SearchEditText"
        android:layout_below="@+id/SearchButton"
        android:layout_marginTop="16dp"
        android:text="@string/Heading2TextView"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/MainListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="11dp" />
</RelativeLayout>
